@@ -75,6 +75,9 @@ PyAPI_FUNC(PyCodeObject *) PyCode_New(
 PyAPI_FUNC(PyCodeObject *)
 PyCode_NewEmpty(const char *filename, const char *funcname, int firstlineno);
 
+/* Return the line number associated with the specified bytecode index
+   in this code object.  If you just need the line number of a frame,
+   use PyFrame_GetLineNumber() instead. */
 PyAPI_FUNC(int) PyCode_Addr2Line(PyCodeObject *, int);
 
 /* for internal use only */
